fix: last row cards alignment

--- a/frontend/src/components/SymbolCard/symbolCard.scss
+++ b/frontend/src/components/SymbolCard/symbolCard.scss
@@ -1,49 +1,87 @@
+@mixin boxShadow($color) {
+  box-shadow: 0 0 18px 3px $color;
+}
+
+@mixin cols-2() {
+  width: 48%;
+
+  &:nth-child(odd) {
+    margin-right: 4%;
+  }
+}
+
+@mixin cols-3() {
+  width: 32%;
+
+  &:nth-child(3n-1) {
+    margin-right: 2%;
+    margin-left: 2%;
+  }
+}
+
+@mixin cols-4() {
+  width: 24%;
+  margin-right: 1.33%;
+
+  &:nth-child(4n) {
+    margin-right: 0;
+  }
+}
+
+@mixin cols-5() {
+  width: 19%;
+  margin-right: 1.25%;
+
+  &:nth-child(5n) {
+    margin-right: 0;
+  }
+}
+
 .symbolCard {
-  margin: 10px 10px 20px;
   padding: 0 0 5px;
   position: relative;
   cursor: pointer;
   background: white;
   border-radius: 4px;
   transition: all 0.1s ease-in-out;
-  box-shadow: 0 0 18px 3px transparent;
+  @include boxShadow(transparent);
 
   &:last-child {
     margin-bottom: 0;
   }
 
   .stocks & {
-    margin: 0 0 20px;
     width: 100%;
+    margin: 0 0 20px;
 
-    @media (min-width: 460px) {
-      width: 48%;
+    @media (min-width: 460px) and (max-width: 799px) {
+      @include cols-2();
     }
 
-    @media (min-width: 800px) {
-      width: 32%;
+    @media (min-width: 800px) and (max-width: 1023px) {
+      @include cols-3();
     }
 
-    @media (min-width: 1024px) {
-      width: 48%;
+    @media (min-width: 1024px) and (max-width: 1199px) {
+      @include cols-2();
     }
 
-    @media (min-width: 1200px) {
-      width: 32%;
+    @media (min-width: 1200px) and (max-width: 1499px) {
+      @include cols-3();
     }
 
-    @media (min-width: 1500px) {
-      width: 24%;
+    @media (min-width: 1500px) and (max-width: 1699px) {
+      @include cols-4();
     }
 
     @media (min-width: 1700px) {
-      width: 19%;
+      @include cols-5();
     }
   }
 
   &--active {
     transform: scale(1.05);
-    box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.76);
+    @include boxShadow(rgba(0, 0, 0, 0.76));
   }
 
   .stocks__list--active &:not(.symbolCard--active) {
@@ -51,11 +89,11 @@
   }
 
   &--down {
-    box-shadow: 0 0 18px 3px #DE5050;
+    @include boxShadow(#DE5050);
   }
 
   &--up {
-    box-shadow: 0 0 18px 3px #74D950;
+    @include boxShadow(#74D950);
   }
 
   &--animation {
